--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,14 @@
 ==============
-Version  1.1.0
+Sürüm  1.1.0
 ==============
 
-- Add Stereo mode for audio.
-- Add frame rotation for video.
-- Show logo normal(LP: #4979).
-- Display the correct shortcut key of increase volume or decrease volume(LP: #4916).
-- When the playing video file is removed from the playlist, then stop playing it(LP: #4915).
-- Solved the mouse drag problem for playlist items(LP: #4907).
-- Add Shortcut for the button of setting audio delay(LP: #4917).
+- Ses için Stereo modu eklendi.
+- Video için çerçeve rotasyonu eklendi.
+- Logo normal göster (LP: # 4979).
+- Ses seviyesini artırmak veya  azaltmak için doğru kısayol tuşunu görüntülendi (LP: # 4916).
+- Oynatılan video dosyası çalma listesinden kaldırıldığında, çalmayı durdurna (LP: # 4915).
+- Çalma listesi öğeleri için fare sürükleme sorununu çözüldü (LP: # 4907).
+- Ses gecikmesini ayarlama düğmesi için Kısayol Eklendi (LP: # 4917).
 
 ==============
 Version  1.0.9
